apps/nemo260-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: nemo260-ambulance-webapi
spec:
 parentRefs:
   - name: wac-hospital-gateway
     namespace: wac-hospital
   - name: wac-hospital-gateway  # Hack to make it work for common cluster
     namespace: wac-hospital-system
 rules:
   - matches:
       - path:
           type: PathPrefix
           value: /nemo260-api
   - matches:
        - path:
            type: PathPrefix
            value: /nemo260-openapi-ui
   - matches:
        - path:
            type: Exact
            value: /nemo260-openapi
     filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
     backendRefs:
        - group: ""
          kind: Service
          name: nemo260-ambulance-webapi
          port: 80
